# Imgproc

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json
js/: package.json
js/public/: index.html
js/src/: App.js  App.scss  index.scss
js/src/components/: Menu.js
js/src/components/base/: Canvas.js  Card.js  DCard.js  Voxel.js  useMousePosition.js
js/src/components/filter/: Median.js
js/src/components/slider/: InputSlider.js
js/src/css/: Card.scss
python/: pyproject.toml  requirements.txt
python/imgproc/: adjust.py  annotation.py  geometry.py  global_distortion.py  local_distortion.py  render.py  resize.py  shadow.py  synth.py
python/imgproc/interp/: __init__.py  area.py  cubic.py  linear.py  nearest.py
python/imgproc/tests/: test_geometry.py  test_resize.py
src/: App.js  App.scss  TestList.js  index.css  index.scss
src/components/: Board.js  Card.js  CardScroll.js  Header.js  Main.js  Scroll.js
src/components/base/: Board.js  Canvas.js  Card.js  Controll.js  Grid.js
src/css/: Card.scss  Median.scss  grid.scss
